# stackwiz

./: .gitignore  Dockerfile  Dockerfile.hub  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: CONSUMER.md  bootstrap.conf.sh.template  bootstrap.sh.template
kb/articles/framework/: backup-restore-certs.md  component-model.md  consul-integration.md  installation-flow.md  kb-pipeline.md  mcp-framework.md  overview.md  registry-and-hub.md  shared-helpers.md  vault-integration.md
src/stackwiz/: app.py  cert_backup.py  cli.py  config_overrides.py  consul_client.py  discovery.py  engine.py  executor.py  headless.py  info.py  log.py  manifest.py  pipeline.py  scaffold.py  secrets.py  secrets_env.py  state.py  tokens.py  vault_client.py
src/stackwiz/backends/: __init__.py  (+1 more)
src/stackwiz_hub/: __init__.py  __main__.py  config.py  consul_watch.py  kb_source.py  mcpjungle.py  models.py  reconciler.py  vault_client.py  write_back.py
src/stackwiz_kb_serve/: __init__.py  router.py
tests/: .gitignore  manifest_valid.yaml  test_backends_package.py  test_cert_backup.py  test_cli_selection.py  test_config_overrides.py  test_consul_client.py  test_discovery.py  test_engine_helpers.py  test_executor.py  test_hub_reconciler.py  test_info.py  test_kb_serve.py  test_manifest.py  test_multi_service.py  test_pipeline.py  test_refresh.py  test_registry.py  test_scaffold.py  test_secret_generators.py  test_secrets_env.py  test_state.py  test_tokens.py  test_vault_client.py  test_vault_runtime.py
tests/integration/: conftest.py  docker-compose.yml  test_smoke.py
(+27 files in other folders)
