[project]
name = "stackwiz"
version = "0.1.0"
description = "Modular TUI installer framework with Consul + Vault integration"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Sergei Chistokhin" },
]
dependencies = [
    "textual>=1.0",
    "pydantic>=2.9",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "click>=8.1",
    "httpx>=0.27",
    "dnspython>=2.6",
    "python-consul2>=0.1.5",
    "hvac>=2.3",
]

[project.scripts]
wizinstall = "stackwiz.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "textual-dev>=1.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stackwiz"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
